--- a/stage/cloudbuild.yaml
+++ b/stage/cloudbuild.yaml
@@ -15,7 +15,7 @@ steps:
  # Deploy container image to Cloud Run
  - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
    entrypoint: gcloud
-   args: ['run','deploy','test-api',
+   args: ['run','deploy','test-reports-api',
           '--image=gcr.io/nih-nci-dceg-connect-stg-5519/test-reports-api:$COMMIT_SHA',
           '--region=us-central1',
           '--service-account=qa-qc-stage@nih-nci-dceg-connect-stg-5519.iam.gserviceaccount.com']
