--- a/stage/Dockerfile
+++ b/stage/Dockerfile
@@ -8,7 +8,7 @@ COPY ["./test_api.r", "./test_api.r"]
 COPY ["./cloud_run_helper_functions.r", "./cloud_run_helper_functions.r"]
 
 # Make output folder for R script to put data into
-RUN mkdir -p /output 
+#RUN mkdir -p /output 
 
 # Run R code
 ENTRYPOINT ["R", "-e","pr <- plumber::plumb('test_api.r'); pr$run(host='0.0.0.0', port=as.numeric(Sys.getenv('PORT')))"]
